[package]
name = "forming"
version = "0.1.0"
authors = [ "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/forming"
documentation = "https://github.com/phodal/forming"
homepage = "https://github.com/phodal/forming"
description = """
Forming, is a lightweight architecture as code language. 架构描述语言
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
