[package]
name = "forming"
version = "0.1.0"
authors = [ "Phodal Huang <h@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/forming"
documentation = "https://github.com/inherd/forming"
homepage = "https://github.com/inherd/forming"
description = """
Forming, is a lightweight architecture design language.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

pest = "2.1.3"
pest_derive = "2.1.0"

clap = "3.0.0-beta.2"

[workspace]
members = [
    'highlighted_core'
]