[package]
name = "highlighted_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"
rand = { version = "~0.8", optional = true }

walkdir = "2"

tree-sitter-javascript = "=0.19.0"
tree-sitter = "=0.19.3"

guarding_core = "0.2.6"
guarding_ident = "0.2.6"

csv = "1.1"

[dev-dependencies]
criterion = "~0.3"

