[package]
name = "puml"
version = "0.1.0"
authors = [ "Phodal Huang <h@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/forming"
documentation = "https://github.com/inherd/forming"
homepage = "https://github.com/inherd/forming"
description = """
puml is a plantuml parser.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
