[package]
name = "guarding-translator"
version = "0.1.0"
authors = [ "Phodal Huang <h@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/forming"
documentation = "https://github.com/inherd/forming"
homepage = "https://github.com/inherd/forming"
description = """
A Translator library, for csv, uml to `.forming` DSL
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
